--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "Notepad++ Theme",
-    "name": "notepadplus",
+    "title": "Notepad++ Theme (Light)",
+    "name": "notepadpluslight",
     "description": "Notepad++ Theme for Brackets",
     "version": "1.0.4",
     "author": "Essam Bahassan <essam.soft@gmail.com>",
